--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
         <div class="banner">
             <div class="banner-head">
                 <h2 class="banner-tittle">Brand New Group of Architects</h2>
-                <p class="paragraph">There are many variations of passages of Lorem Ipsum available, but the majority
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority
                     have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 </p>
+                <button class="btn-primary">Explore More</button>
             </div>
-            <button><span class="btn-primary">Explore More</span></button>
-            <div class="img">
-                <img src="images/banner.png" alt="">
-            </div>
+            <img src="images/banner.png" alt="">
         </div>
     </header>
 </body>
