--- a/index.html
+++ b/index.html
@@ -43,9 +43,41 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="teams-details">
-                <h3 class="teams-title"><span class="quick">Quick list </span><span class="of">of Our</span> <span class="feature">Features</span></h3>
-                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="teams-title"><span class="quick">Quick list </span><span class="of">of Our</span> <span
+                        class="feature">Features</span></h3>
+                <p class="teams-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+        <section class="featured">
+
+        </section>
+        <section class="facts">
+            <h3 class="facts-title">Some Facts</h3>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <div class="facts-card-container">
+                <div class="card">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3 class="card-stats">54</h3>
+                    <p class="card-title">Award Winning</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3 class="card-stats">1458</h3>
+                    <p class="card-title">Project Finished</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3 class="card-stats">590</h3>
+                    <p class="card-title">Clients Worked</p>
+                </div>
+                <div class="card">
+                    <img src="images/icons/email.png" alt="">
+                    <h3 class="card-stats">22578</h3>
+                    <p class="card-title">Email Send</p>
+                </div>
             </div>
         </section>
     </main>
