--- a/index.html
+++ b/index.html
@@ -52,11 +52,41 @@
             </div>
         </section>
         <section class="featured">
+            <div class="feature-content">
+                <h3 class="feature-title">Features you will love & enjoy</h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomized words which don't
+                    look even</p>
+                    <div class="card">
+                        <h3 class="card-title">Desktop & Mobile Version</h3>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="card-title">Drag & Drop Builder</h3>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="card-title">Awesome Modern Design</h3>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+                    <div class="card">
+                        <h3 class="card-title">Super Easy to Edit</h3>
+                        <p class="card-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomized...........</p>
+                    </div>
+            </div>
+            <div class="feature-img">
+               <img src="images/architect.png" alt="">
+               <div class="ten-years-badge">
+                <h2 class="year">10+ Year</h2>
+                <p class="exp">Experience</p>
+               </div>
+            </div>
 
         </section>
         <section class="facts">
             <h3 class="facts-title">Some Facts</h3>
-            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration.</p>
             <div class="facts-card-container">
                 <div class="card">
                     <img src="images/icons/ribon.png" alt="">
@@ -80,7 +110,22 @@
                 </div>
             </div>
         </section>
+        <section class="sponsors">
+            <h3 class="sponsor-title">Our Sponsors</h3>
+            <p class="sponsor-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration.</p>
+            <div class="sponsors-image-container">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
     </main>
+    <footer>
+        <p class="footer">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 
 </html>
